# algatorc

./: CMakeLists.txt  Configuration.cpp  Configuration.hpp  DynamicLibrary.cpp  DynamicLibrary.hpp  Error.cpp  Error.hpp  README.md  configuration.cpp  configuration.hpp  error.cpp  error.hpp  main.cpp
Compilation/: AlgorithmCompilationInput.cpp  AlgorithmCompilationInput.hpp  CompilationDiagnosticsHandler.cpp  CompilationDiagnosticsHandler.hpp  CompilationInput.cpp  CompilationInput.hpp  Compiler.cpp  Compiler.hpp  DummyConsumer.cpp  DummyConsumer.hpp  Linker.cpp  Linker.hpp  ProjectCompilationInput.cpp  ProjectCompilationInput.hpp
